# src/routes/index.js
@@ -5,6 +5,7 @@ const usersRouter = require('./users');
 const docsRouter = require('./api-docs');
 const listingsRouter = require('./listings');
 const companiesRouter = require('./companies');
+const rolesRouter = require('./roles');
 
 const router = Router();
 
@@ -13,5 +14,6 @@ router.use('/api/auth', authRouter);
 router.use('/api/users', usersRouter);
 router.use('/api/listings', listingsRouter);
 router.use('/api/companies', companiesRouter);
+router.use('/api/roles', rolesRouter);
 
 module.exports = router;
