# src/routes/users.js
@@ -8,9 +8,20 @@ const {
   deleteUserInfo,
   getUserInfoById,
   updateUserRoles,
+  getUserRoles,
 } = require('controllers/user');
 
 const router = Router({ mergeParams: true });
+
+/**
+ * Handle GET to /api/users/roles route.
+ */
+router.get('/roles', auth, getUserRoles);
+
+/**
+ * Handle PATCH to /api/users/roles route.
+ */
+router.patch('/roles', auth, updateUserRoles);
 
 /**
  * Handle GET to /api/users route.
@@ -26,11 +37,6 @@ router.post('/', auth, createUserInfo);
  * Handle PATCH to /api/users route.
  */
 router.patch('/', auth, updateUserInfo);
-
-/**
- * Handle PATCH to /api/users/roles route.
- */
-router.patch('/roles', auth, updateUserRoles);
 
 /**
  * Handle DELETE to /api/users route.
